Make workflows call common build.yml workflow
Reduces duplication and paves the way for only buildings the packages
once, rather than the current 11 builds.

acme-tests.yml, ipa-tests.yml and server-tests.yml will be handled
separately, as the build steps for those are slightly different.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,14 @@ jobs:
       - name: Build PKI packages
         run: ./build.sh --with-timestamp --work-dir=build rpm
 
+      - name: Upload PKI packages
+        uses: actions/upload-artifact@v2
+        with:
+          name: pki-build-${{ matrix.os }}
+          path: |
+            build/RPMS/
+            build/SRPMS/
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
