Add qe-tests to pki-ci.yml

--- a/.github/workflows/pki-ci.yml
+++ b/.github/workflows/pki-ci.yml
@@ -41,6 +41,10 @@ jobs:
   python-tests:
     uses: ./.github/workflows/python-tests.yml
 
+  qe-tests:
+    needs: build
+    uses: ./.github/workflows/qe-tests.yml
+
   tks-tests:
     needs: build
     uses: ./.github/workflows/tks-tests.yml
